# Reverb

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
Graphic-Assets/: CMakeLists.txt
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/Source/: FDN_Reverb.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  mix-matrix.h
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
